# fetchers.py

./: .gitignore  setup.cfg  tutorial.ipynb
fetchers/: DownloadTarget.py  FetchConfig.py  Fetcher.py  GitRepoFetcher.py  __init__.py  styles.py
fetchers/discoverers/: DNF.py  GitHub.py  MirrorBrainz.py  SourceForge.py  __init__.py
fetchers/downloaders/: __init__.py
fetchers/tools/: download.py
fetchers/unpackers/: __init__.py
fetchers/unpackers/archives/: __init__.py  rpm.py  tar.py
fetchers/unpackers/compression/: __init__.py  gzip.py
fetchers/utils/: idded.py  integrity.py  url.py
fetchers/verifiers/: OpenPGP.py  __init__.py  hashlist.py
fetchers/webServices/: __init__.py
fetchers/webServices/services/: GitHub.py  GitLab.py  __init__.py  knownServices.json
